# RustFuck

./: Cargo.toml  README.md
examples/: syscall.bf  syscall_read.bf
src/: exec.rs  lexer.rs  main.rs
