[package]
name = "RustFuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "4.3.3"
log = "0.4.20"
clap = { version = "4.5.0", features = ["derive"] }

[profile.dev]
overflow-checks = false
[profile.release]
overflow-checks = false
